5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4478/executions/1871_1719.log
== TEST (2019-07-02 16:44:11) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("nota dos alunos: ")))
vetor = zeros(matriz.shape[0],dtype=int)
for i in range(matriz.shape[0]):
	vetor[i] = sum(matriz[i,:])
alunos = 0
for i in range (size(vetor)):
	if(i>=5):
		print(alunos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:45:20) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("nota dos alunos: ")))
vetor = zeros(matriz.shape[0],dtype=int)
for i in range(matriz.shape[0]):
	vetor[i] = sum(matriz[i,:])
alunos = 0
	for i in range (size(vetor)):
		if(i>=5):
print(alunos)
-- ERROR:
File "XXXX", line 9
    for i in range (size(vetor)):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:45:37) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("nota dos alunos: ")))
vetor = zeros(matriz.shape[0],dtype=int)
for i in range(matriz.shape[0]):
	vetor[i] = sum(matriz[i,:])
	alunos = 0
	for i in range (size(vetor)):
		if(i>=5):
print(alunos)
-- ERROR:
File "XXXX", line 11
    print(alunos)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:45:49) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("nota dos alunos: ")))
vetor = zeros(matriz.shape[0],dtype=int)
for i in range(matriz.shape[0]):
	vetor[i] = sum(matriz[i,:])
	alunos = 0
	for i in range (size(vetor)):
		if(i>=5):
	print(alunos)
-- ERROR:
File "XXXX", line 11
    print(alunos)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:46:04) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("nota dos alunos: ")))
vetor = zeros(matriz.shape[0],dtype=int)
for i in range(matriz.shape[0]):
	vetor[i] = sum(matriz[i,:])

	for i in range (size(vetor)):
		if(i>=5):
	print(alunos)
-- ERROR:
File "XXXX", line 11
    print(alunos)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:47:04) 
-- CODE:
from numpy import*
from numpy.linalg import*
al
matriz = array(eval(input("nota dos alunos: ")))
vetor = zeros(matriz.shape[0],dtype=int)
for i in range(matriz.shape[0]):
	vetor[i] = sum(matriz[i,:])
alunos = 0
	for i in range (size(vetor)):
		if(i>=5):
		alunos = alunos +1
print(alunos)

-- ERROR:
File "XXXX", line 9
    for i in range (size(vetor)):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:47:13) 
-- CODE:
from numpy import*
from numpy.linalg import*
al
matriz = array(eval(input("nota dos alunos: ")))
vetor = zeros(matriz.shape[0],dtype=int)
for i in range(matriz.shape[0]):
	vetor[i] = sum(matriz[i,:])
alunos = 0
	for j in range (size(vetor)):
		if(i>=5):
		alunos = alunos +1
print(alunos)

-- ERROR:
File "XXXX", line 9
    for j in range (size(vetor)):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:47:31) 
-- CODE:
from numpy import*
from numpy.linalg import*
al
matriz = array(eval(input("nota dos alunos: ")))
vetor = zeros(matriz.shape[0],dtype=int)
for i in range(matriz.shape[0]):
	vetor[i] = sum(matriz[i,:])
alunos = 0
for i in range (size(vetor)):
	if(i>=5):
	alunos = alunos +1
print(alunos)

-- ERROR:
File "XXXX", line 11
    alunos = alunos +1
         ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:47:44) 
-- CODE:
from numpy import*
from numpy.linalg import*
al
matriz = array(eval(input("nota dos alunos: ")))
vetor = zeros(matriz.shape[0],dtype=int)
for i in range(matriz.shape[0]):
	vetor[i] = sum(matriz[i,:])
alunos = 0
for i in range (size(vetor)):
	if(i>=5):
alunos = alunos +1
print(alunos)

-- ERROR:
File "XXXX", line 11
    alunos = alunos +1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:47:53) 
-- CODE:
from numpy import*
from numpy.linalg import*
al
matriz = array(eval(input("nota dos alunos: ")))
vetor = zeros(matriz.shape[0],dtype=int)
for i in range(matriz.shape[0]):
	vetor[i] = sum(matriz[i,:])
alunos = 0
for i in range (size(vetor)):
	if(i>=5):
	alunos = alunos +1
	print(alunos)

-- ERROR:
File "XXXX", line 11
    alunos = alunos +1
         ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:48:03) 
-- CODE:
from numpy import*
from numpy.linalg import*
al
matriz = array(eval(input("nota dos alunos: ")))
vetor = zeros(matriz.shape[0],dtype=int)
for i in range(matriz.shape[0]):
	vetor[i] = sum(matriz[i,:])
alunos = 0
for i in range (size(vetor)):
	if(i>=5):
alunos = alunos +1
print(alunos)

-- ERROR:
File "XXXX", line 11
    alunos = alunos +1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:48:12) 
-- CODE:
from numpy import*
from numpy.linalg import*
al
matriz = array(eval(input("nota dos alunos: ")))
vetor = zeros(matriz.shape[0],dtype=int)
for i in range(matriz.shape[0]):
	vetor[i] = sum(matriz[i,:])
alunos = 0
for i in range (size(vetor)):
	if(i>=5):
		alunos = alunos +1
print(alunos)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:48:21) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("nota dos alunos: ")))
vetor = zeros(matriz.shape[0],dtype=int)
for i in range(matriz.shape[0]):
	vetor[i] = sum(matriz[i,:])
alunos = 0
for i in range (size(vetor)):
	if(i>=5):
		alunos = alunos +1
print(alunos)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:48:26) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("nota dos alunos: ")))
vetor = zeros(matriz.shape[0],dtype=int)
for i in range(matriz.shape[0]):
	vetor[i] = sum(matriz[i,:])
alunos = 0
for i in range (size(vetor)):
	if(i>=5):
		alunos = alunos +1
print(alunos)

-- EXECUTION TIME:
0.998541
-- TEST CASE 1:
---- input:
[[8.7,8.6,2.2],[5.3,8.0,4.9],[0.3,4.4,9.9]]
---- correct output:
2
---- user output:
0
-- TEST CASE 2:
---- input:
[[9.5,0.5,8.1],[1.4,5.3,4.0],[9.4,2.6,2.7]]
---- correct output:
1
---- user output:
0
-- TEST CASE 3:
---- input:
[[9.4,3.0,2.6,8.5],[3.9,6.2,6.5,2.1],[8.8,5.2,8.3,9.6],[2.1,2.0,2.1,3.3]]
---- correct output:
2
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:49:02) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("nota dos alunos: ")))
vetor = zeros(matriz.shape[0],dtype=int)
for i in range(matriz.shape[0]):
	vetor[i] = sum(matriz[i,:])
alunos = 0
for i in range (size(vetor)):
	if(i>=5):
		alunos = alunos +1
print(alunos)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:51:00) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("nota dos alunos: ")))
vetor = zeros(matriz.shape[0],dtype=int)
for i in range(matriz.shape[0]):
	vetor[i] = sum(matriz[i,:])/(size(vetor))
alunos = 0
for i in range (size(vetor)):
	if(i>=5):
		alunos = alunos +1
print(alunos)

-- EXECUTION TIME:
0.991799
-- TEST CASE 1:
---- input:
[[8.7,8.6,2.2],[5.3,8.0,4.9],[0.3,4.4,9.9]]
---- correct output:
2
---- user output:
0
-- TEST CASE 2:
---- input:
[[9.5,0.5,8.1],[1.4,5.3,4.0],[9.4,2.6,2.7]]
---- correct output:
1
---- user output:
nota dos alunos: 0
-- TEST CASE 3:
---- input:
[[9.4,3.0,2.6,8.5],[3.9,6.2,6.5,2.1],[8.8,5.2,8.3,9.6],[2.1,2.0,2.1,3.3]]
---- correct output:
2
---- user output:
nota dos alunos: 0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:52:11) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("nota dos alunos: ")))
vetor = zeros(matriz.shape[0],dtype=int)
for i in range(matriz.shape[0]):
	vetor[i] = sum(matriz[i,:])
	media = sum(vetor)/size(vetor)
alunos = 0
for i in range (size(media)):
	if(i>=5):
		alunos = alunos +1
print(alunos)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:52:15) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("nota dos alunos: ")))
vetor = zeros(matriz.shape[0],dtype=int)
for i in range(matriz.shape[0]):
	vetor[i] = sum(matriz[i,:])
	media = sum(vetor)/size(vetor)
alunos = 0
for i in range (size(media)):
	if(i>=5):
		alunos = alunos +1
print(alunos)

-- EXECUTION TIME:
1.04543
-- TEST CASE 1:
---- input:
[[8.7,8.6,2.2],[5.3,8.0,4.9],[0.3,4.4,9.9]]
---- correct output:
2
---- user output:
0
-- TEST CASE 2:
---- input:
[[9.5,0.5,8.1],[1.4,5.3,4.0],[9.4,2.6,2.7]]
---- correct output:
1
---- user output:
0
-- TEST CASE 3:
---- input:
[[9.4,3.0,2.6,8.5],[3.9,6.2,6.5,2.1],[8.8,5.2,8.3,9.6],[2.1,2.0,2.1,3.3]]
---- correct output:
2
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
